--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
     sdk: flutter
   http: any
   splashscreen: ^1.2.0
+  fcharts: ^0.0.11
+ 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,8 +45,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - diasMarcados.json
+    - logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
