--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   splashscreen: ^1.2.0
   fcharts: ^0.0.11
   auto_size_text: ^2.1.0
+  mobx: ^1.0.0
+  flutter_mobx: ^1.0.0
+  shared_preferences: ^0.5.6+3
+  provider: ^4.0.5
  
 
 
@@ -33,6 +37,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.7.2
+  mobx_codegen: ^1.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
