--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   fcharts: ^0.0.11
   auto_size_text: ^2.1.0
   cloud_firestore: ^0.13.6
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.16.1
  
 
 
