--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -30,7 +30,10 @@ dependencies:
   flutter_mobx: ^1.0.0
   shared_preferences: ^0.5.6+3
   provider: ^4.0.5
- 
+  camera: ^0.5.8+2
+  path_provider: ^1.6.10
+  path: ^1.7.0
+  image_picker: 
 
 
   # The following adds the Cupertino Icons font to your application.
