--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path_provider: ^1.6.10
   path: ^1.6.4
   image_picker: 
+  screen: ^0.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
