--- a/inf1300_relax/pubspec.yaml
+++ b/inf1300_relax/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/
     - i18n/pt.json
     - i18n/en.json
+    - i18n/es.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
